# AutoPatch

./: .dockerignore  .env.example  .gitignore  Dockerfile  ISSUES.md  README.md  README.zh.md  autopatch.py  calc.py  config.py  diff_generator.py  docker-compose.yml  github_client.py  main.py  pyproject.toml  requirements.txt  run_eval.py  server.py  task_store.py
agent/: __init__.py  graph.py
api/: __init__.py  auth.py  diff_service.py  events.py  git_ops.py  models.py
core/: config.py  diff_generator.py  github_client.py  logging_config.py  task_store.py
docs/: eval-test-plan.md  evaluation-protocol.md  evaluation-runs.md  rag_design.md  sanity-v1-plan.md  sanity-v2-plan.md
eval/: config.py  dataset.py  docker_env.py  evaluator.py  instance_env.py  metrics.py  runner.py  sanity.py  unified.py  unified_models.py  unified_preparers.py  unified_providers.py  unified_runner.py  verify.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: test_retrieve.py
tests/: conftest.py  test_api_auth.py  test_api_diff_service.py  test_api_events.py  test_api_git_ops.py  test_api_models.py  test_autopatch_run_agent.py  test_context_utils.py  test_dependency_metadata.py  test_diff_filter.py  test_docker_env.py  test_docker_verify.py  test_dockerfile.py  test_execute_tools.py  test_file_tools.py  test_github_client.py  test_package_boundaries.py  test_rag_chunker.py  test_rag_indexer.py  test_rag_retriever.py  test_sanity_runner.py  test_server.py  test_task_store.py  test_unified_cli.py  test_unified_models.py  (+3 more)
(+102 files in other folders)
